first working commit

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,15 @@
+@import '~bulma/bulma.sass';
+
+html{
+  overflow-y: auto ;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,4 +19,12 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.mainWrapper{
+  margin-top:20px;
+}
+
+.column{
+  display: flex;
 }
