--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,12 @@
+
+$primary: #6D798A;
+$link: #9DC1F2;
+$info: #C7DEFF;
+$dark: #73879E;
+$text: #6D798A;
+$background: #DADEE3;
+
+
 @import '~bulma/bulma.sass';
 
 html{
